--- a/.github/workflows/semgrep-tracing.yml
+++ b/.github/workflows/semgrep-tracing.yml
@@ -1,4 +1,4 @@
-name: semgrep-tracing
+name: semgrep
 
 on:
   pull_request: {}
@@ -13,11 +13,8 @@ jobs:
     # Skip any PR created by dependabot to avoid permission issues
     if: (github.actor != 'dependabot[bot]')
     steps:
-      # Fetch project source
       - uses: actions/checkout@v2
-
       - uses: returntocorp/semgrep-action@v1
         with:
-          config: >- # more at semgrep.dev/explore
-            p/security-audit
-            p/secrets
+          config: >-
+            .semgrep/
