--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,12 @@ on: [push]
 jobs:
   obs-analysis:
     runs-on: ubuntu-latest
-    name: Example job.
+    name: Analyze OpenTelemetry integration.
     steps:
       - uses: actions/checkout@v2
       - name: Analysis
         id: run-analysis
-        uses: dominik-/observability-ci-metrics-action@v1.5
+        uses: dominik-/observability-ci-metrics-action@v1.6
         with:
           rules: 'java-check-span-creation'
       - name: Show results
